--- a/index.html
+++ b/index.html
@@ -13,11 +13,28 @@
 </head>
 <body>
     <section >
-        <div class="heading-part center-align">
+        <div class="heading-part">
             <h1>Help The People,<br> They Need Your Help</h1>
             <p>We work to help the people affected by natural disasters. This is a non-profit <br> charity and you can help to make the disaster affected people survive <br> through us by donating as you can.</p>
             <a class="button" href="">Donate Now</a>
         </div>
+    </section>
+    <section class="donate-today">
+        <div>
+            <h2>Donate Today</h2>
+            <p>Donate as much as you can, <br> maybe your donation will save a life.
+            </p>
+        </div>
+        <div class="flexible-display">
+            <h1 class="one-fifth-width" id="margin-left">100tk</h1>
+            <h1 class="one-fifth-width">200tk</h1>
+            <h1 class="one-fifth-width" id="border">500tk</h1>
+            <h1 class="one-fifth-width">1000tk</h1>
+            <h1 class="one-fifth-width" id="margin-right">5000tk</h1>
+        </div>
+        <input type="text">
+        <p id="custom-amount">Other amount (taka)</p>
+        <a class="button" href="">Donate Now</a>
     </section>
 </body>
 </html>
