--- a/index.html
+++ b/index.html
@@ -36,5 +36,25 @@
         <p id="custom-amount">Other amount (taka)</p>
         <a class="button" href="">Donate Now</a>
     </section>
+    <section>
+        <div class="donate-plan">
+            <h2>Our Donate Plan</h2>
+            <p>Firstly we collect donations. When somewhere inside the country any natural disaster occurs, we arrive there immediately and start to do our donation work. Basically, we work in three major sectors. <br> Those are,</p>
+        </div>
+        <div class="donate-plan-flex">
+            <div id="food-service" class="one-third-width">
+                <h3>1. food for affected people.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque mollitia perferendis cum nesciunt id repellendus at voluptatibus exercitationem maxime!</p>
+            </div>
+            <div id="medical" class="one-third-width">
+                <h3>2. emergency medical service.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque mollitia perferendis cum nesciunt id repellendus at voluptatibus exercitationem maxime!</p>
+            </div>
+            <div id="shelter" class="one-third-width">
+                <h3>3. post-disaster shelter.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque mollitia perferendis cum nesciunt id repellendus at voluptatibus exercitationem maxime!</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
