--- a/index.html
+++ b/index.html
@@ -39,20 +39,46 @@
     <section>
         <div class="donate-plan">
             <h2>Our Donate Plan</h2>
-            <p>Firstly we collect donations. When somewhere inside the country any natural disaster occurs, we arrive there immediately and start to do our donation work. Basically, we work in three major sectors. <br> Those are,</p>
+            <p>Firstly we collect donations through online and offline campaigns. When somewhere inside the country any natural disaster occurs, we arrive there immediately and start to do our donation work. Basically, we work in three major sectors. <br> Those are,</p>
         </div>
         <div class="donate-plan-flex">
             <div id="food-service" class="one-third-width">
-                <h3>1. food for affected people.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque mollitia perferendis cum nesciunt id repellendus at voluptatibus exercitationem maxime!</p>
+                <h3>1. Food for affected people.</h3>
+                <p>Our first goal is to supply enough dry food and drinks to the disaster-affected people so that they can survive some days until rescue and rehabilitation services reach them.</p>
             </div>
             <div id="medical" class="one-third-width">
-                <h3>2. emergency medical service.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque mollitia perferendis cum nesciunt id repellendus at voluptatibus exercitationem maxime!</p>
+                <h3>2. Emergency medical service.</h3>
+                <p>Beside serving food out, another team works for the injured people. Fast-aid and primary medicines are applied first. If needed, the patient is sent to the hospital.</p>
             </div>
             <div id="shelter" class="one-third-width">
                 <h3>3. post-disaster shelter.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae doloremque mollitia perferendis cum nesciunt id repellendus at voluptatibus exercitationem maxime!</p>
+                <p>After a horrible disaster, an area becomes like a graveyard. Our another motive is to resheltering the affected people. We try our best to make shelters for every family.</p>
+            </div>
+        </div>
+    </section>
+    <section id="missions">
+        <div id="flex-h2">
+            <h2 id="featured-h2">Our Current Operations</h2>
+        <h2 id="campaign-h2">Our Upcoming Campaigns</h2>
+        </div>
+        <div id="current-operations">
+            <div id="featured" class="half-width">
+                <h2>Sylhet flood situation</h2>
+                <p>We all know that currently more than 11 districts including sylhet, shunamganj, netrokona has been drowened in the flood waters. Directly and indirectly more than 9 million people are suffering by the flood. More than 151,142 houses have been destroyed and people are suffering for food,shelter and medicine. Many communities also face the added challenge of a total lack of electricity, meaning they are then unable to keep in contact with family members and friends to ensure their safety. We are working there to help the people to survive. Till now we have collected more than 2 million taka of donations.And our campaigns and fundraising is still running. If you also want to be a part of our mission, you can donate us or contact us throuh the "Donate Now" button.</p>
+            </div>
+            <div class="half-width">
+                <div class="side-tiles">
+                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                </div>
+                <div class="side-tiles">
+                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                </div>
+                <div class="side-tiles">
+                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                </div>
+                <div class="side-tiles">
+                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                </div>
             </div>
         </div>
     </section>
