--- a/index.html
+++ b/index.html
@@ -82,5 +82,17 @@
             </div>
         </div>
     </section>
+    <section id="get-my-updates">
+        <h2>Get Our Updates</h2>
+        <p>Please give your email address to stay connected with me. <br>
+            You'll be updated about Our works.
+        </p>
+        <div id="email-input">
+            <input placeholder="Email Address" type="email">
+            <button>Subscribe</button>
+        </div>
+    </section>
+    
+    <h1>deletie</h1>
 </body>
 </html>
