--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
     <section id="missions">
         <div id="flex-h2">
-            <h2 id="featured-h2">Our Current Operations</h2>
+            <h2 id="featured-h2">Our Current Operation</h2>
         <h2 id="campaign-h2">Our Upcoming Campaigns</h2>
         </div>
         <div id="current-operations">
@@ -92,7 +92,9 @@
             <button>Subscribe</button>
         </div>
     </section>
-    
-    <h1>deletie</h1>
+    <footer>
+        <h1>"Be Humble</h1>
+        <h1>Keep Helping"</h1>
+    </footer>
 </body>
 </html>
