--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Help The Affected</title>
+    <title>Help The Helpless Charity</title>
+    <link rel="shortcut icon" href="images/Charity_health-removebg.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,12 +13,10 @@
 
 </head>
 <body>
-    <section >
-        <div class="heading-part">
+    <section class="heading-part">
             <h1>Help The People,<br> They Need Your Help</h1>
             <p>We work to help the people affected by natural disasters. This is a non-profit <br> charity and you can help to make the disaster affected people survive <br> through us by donating as you can.</p>
-            <a class="button" href="">Donate Now</a>
-        </div>
+            <a class="donate-now-button" href="">Donate Now</a>
     </section>
     <section class="donate-today">
         <div>
@@ -34,21 +33,21 @@
         </div>
         <input type="text">
         <p id="custom-amount">Other amount (taka)</p>
-        <a class="button" href="">Donate Now</a>
+        <a class="donate-now-button" href="">Donate Now</a>
     </section>
     <section>
         <div class="donate-plan">
             <h2>Our Donate Plan</h2>
             <p>Firstly we collect donations through online and offline campaigns. When somewhere inside the country any natural disaster occurs, we arrive there immediately and start to do our donation work. Basically, we work in three major sectors. <br> Those are,</p>
         </div>
-        <div class="donate-plan-flex">
+        <div class="donate-plan-boxes">
             <div id="food-service" class="one-third-width">
                 <h3>1. Food for affected people.</h3>
                 <p>Our first goal is to supply enough dry food and drinks to the disaster-affected people so that they can survive some days until rescue and rehabilitation services reach them.</p>
             </div>
             <div id="medical" class="one-third-width">
                 <h3>2. Emergency medical service.</h3>
-                <p>Beside serving food out, another team works for the injured people. Fast-aid and primary medicines are applied first. If needed, the patient is sent to the hospital.</p>
+                <p>Beside serving food out, another team works for the injured people. First-aid and primary medicines are applied first. If needed, the patient is sent to the hospital.</p>
             </div>
             <div id="shelter" class="one-third-width">
                 <h3>3. post-disaster shelter.</h3>
@@ -64,32 +63,32 @@
         <div id="current-operations">
             <div id="featured" class="half-width">
                 <h2>Sylhet flood situation</h2>
-                <p>We all know that currently more than 11 districts including sylhet, shunamganj, netrokona has been drowened in the flood waters. Directly and indirectly more than 9 million people are suffering by the flood. More than 151,142 houses have been destroyed and people are suffering for food,shelter and medicine. Many communities also face the added challenge of a total lack of electricity, meaning they are then unable to keep in contact with family members and friends to ensure their safety. We are working there to help the people to survive. Till now we have collected more than 2 million taka of donations.And our campaigns and fundraising is still running. If you also want to be a part of our mission, you can donate us or contact us throuh the "Donate Now" button.</p>
+                <p>We all know that currently more than 11 districts including sylhet, shunamganj, netrokona has been drowened in the flood waters. Directly and indirectly more than 9 million people are suffering by the flood. More than 151,142 houses have been destroyed and people are suffering for food,shelter and medicine. Many communities also face the added challenge of a total lack of electricity, meaning they are then unable to keep in contact with family members and friends to ensure their safety. Moreover, according to the European Centre for Medium-Range Weather Forecasts (ECMW), there will be nearly 500 to 600 millimetres of rainfall in Cherrapunji, an upstream region of India situated near the northeast part of Bangladesh. The region recorded 972 millimetres of rainfall, the highest in 122 years, and 2500 millimetres, the highest in 100 years. Now we are working there to help the people to survive. Till now we have collected more than 2 millions taka of donations. And our campaigns and fundraising is still running. If you also want to be a part of our mission, you can donate us or contact us throuh the "Donate Now" button.</p>
             </div>
             <div class="half-width">
                 <div class="side-tiles">
-                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                    <p><b>Rehabilitation mission in flood victim areas </b><br><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless now. <br ><small><a class="read-more" href="">Read More</a></small></p>
                 </div>
-                <div class="side-tiles">
-                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                <div class="side-tiles" id="medical-kits">
+                    <p><b>Collecting First-aid and Medical kits</b><br><br> As in every disaster occurance, there is injured people. And to treat the injured people, we need a huge number of medical kits and medical experts. We need a huge budget in this sector. That's why, we are planning to do a medical campaign to collect donation.<br><small><a class="read-more" href="">Read More</a></small></p>
                 </div>
-                <div class="side-tiles">
-                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                <div class="side-tiles" id="food-donation">
+                    <p><b>Collecting Food Donations</b><br><br> The first thing that we need in any operation is food. We are going to arrange a food campaign after the medical campaign. We will be collecting dry foods and donations for food sector. <br ><small><a class="read-more" href="">Read More</a></small></p>
                 </div>
-                <div class="side-tiles">
-                    <p><b>Rehabilitation mission in flood victim areas </b><br> Aproximately 151,142 houses are damaged by flood in sylhet, sunamganj and other 11 districts. We will be fundraising for rehabilitating those people who are homeless. <br ><small><a class="read-more" href="">Read More</a></small></p>
+                <div class="side-tiles" id="charity-health">
+                    <p><b> Charity Health Campaign</b><br><br> After a mission is done, we have to get ready for another upcoming mission. We have to renew our kits and fresh our soul. After the running mission is finished, we will arange another campaign called "Charity Health Campaign". Which will refresh our mind and soul. <br ><small><a class="read-more" href="">Read More</a></small></p>
                 </div>
             </div>
         </div>
     </section>
-    <section id="get-my-updates">
+    <section id="get-our-updates">
         <h2>Get Our Updates</h2>
-        <p>Please give your email address to stay connected with me. <br>
-            You'll be updated about Our works.
+        <p>
+            Please give your email address to stay connected with us.<br>You'll be updated about Our works.
         </p>
         <div id="email-input">
             <input placeholder="Email Address" type="email">
-            <button>Subscribe</button>
+            <button type="button">Subscribe</button>
         </div>
     </section>
     <footer>
